--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,5 +2,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
-    border: 1px solid red;
+    border: 1px solid blue;
+    border-radius: 0.5rem;
 }
